--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-api.games.saga.url=http://${api.games.saga.name}
-spring.kafka.producer.bootstrap-servers=http://kafka-server:9092
-spring.kafka.consumer.bootstrap-servers=http://kafka-server:9092
-events.resource=events.csv
+api.games.saga.url=${api.games.saga.name}
+spring.kafka.producer.bootstrap-servers=kafka-server:9092
+spring.kafka.consumer.bootstrap-servers=kafka-server:9092
+
