--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.kafka.consumer.group-id=group_id
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.properties.spring.json.trusted.packages=java.util,java.lang,com.mca.*
 spring.kafka.consumer.properties.isolation.level=read_committed
 spring.kafka.consumer.heartbeat-interval=4000
@@ -44,7 +44,4 @@ topic=MCA
 spring.application.name=MCA Backend Videogames
 
 api.games.saga.url=localhost:3000
-api.games.saga.name=simulado-games
-
-events.resource=src/main/resources/events.csv
-kafka.producer.fixed.rate=60000
+api.games.saga.name=simulado
