--- a/src/main/resources/static/videoGames.yaml
+++ b/src/main/resources/static/videoGames.yaml
@@ -2,6 +2,8 @@ openapi: 3.0.0
 info:
   title: VideoGamesAPI
   version: '1.0'
+servers:
+  - url: 'http://localhost:8080'
 tags:
   - name: Videogames
     description: Info from videogames
@@ -23,12 +25,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Sagas'
-        '500':
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Sagas:
@@ -57,16 +53,3 @@ components:
         - title
         - price
         - availability
-    Error:
-      description: 'Error detail'
-      type: object
-      properties:
-        code:
-          type: string
-          minLength: 1
-        description:
-          type: string
-          minLength: 1
-      required:
-        - code
-        - description
